2009-01-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstindex.c: (gst_index_get_type):
	Add a debugging category for GstIndex, first little step in making
	indexing top-notch.

2009-01-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstelement.c: (gst_element_message_full),
	(gst_element_pads_activate):
	* gst/gstobject.c: (gst_object_dispatch_properties_changed):
	* gst/gstutils.c: (gst_pad_proxy_getcaps), (gst_pad_proxy_setcaps),
	(gst_pad_add_data_probe_full), (gst_pad_add_event_probe_full),
	(gst_pad_add_buffer_probe_full), (gst_pad_remove_data_probe),
	(gst_pad_remove_event_probe), (gst_pad_remove_buffer_probe):
	Assign debug statements to relevant categories instead of the 'default'
	category so they don't get lost in debugging.

2009-01-01  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstdebugutils.c:
	  Add some ideas, how to make the graph smaller.

	* gst/gstutils.c:
	  Add a comment from a debug session.

	* libs/gst/base/gstbasetransform.c:
	  Log more context.

	* libs/gst/controller/gstinterpolationcontrolsource.c:
	  Indet.

	* plugins/elements/gstcapsfilter.c:
	  Fix typo in docs.

2008-12-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstbus.c: (gst_bus_dispose), (gst_bus_get_property),
	  (gst_bus_wakeup_main_context), (gst_bus_set_main_context),
	  (gst_bus_post), (gst_bus_source_prepare), (gst_bus_source_finalize),
	  (gst_bus_create_watch):
	  Make GstBusSource work with non-default main contexts (#562170).

	* tests/check/gst/gstbus.c: (message_func_eos), (message_func_app),
	  (test_watch), (test_watch_with_custom_context), (gst_bus_suite):
	  Add test case for GstBusSource with a non-default main context.

	* tests/check/libs/.cvsignore:
	  Ignore more.

2008-12-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstregistrybinary.c: (unpack_element), (unpack_const_string),
	  (unpack_string)::
	  Wrap multi-line macros in G_STMT_{START|END}.
